# mp3-autotagger

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  NOTICES  NOTICES.md  README.md  environment.yml  mp3_autotagger.spec  pyproject.toml
.github/: issue_template.md  pull_request_template.md
.github/workflows/: build.yaml  main.yaml  publish.yaml  release.yaml  unit_tests.yaml
gui/: main_window.ui
media/: example.webm
mp3_autotagger/: __main__.py  exceptions.py  main.py  mp3.py  ui_main_window.py  utils.py
mp3_autotagger/assets/: main_icon.icns
mp3_autotagger/gui/: __init__.py  main_window.py  mp3_autotagger_tab.py  ui.py  youtube2mp3_tab.py
mp3_autotagger/translations/: eng-es.qm  eng-es.ts
mp3_autotagger/utils/: assets.py  github.py  mp3.py  package.py  qt.py  shazam.py  system.py  update.py  youtube.py
scripts/: build.sh  fixes.py  generate_notices.sh  integration_test_linux_macos.sh  integration_test_win.ps1  py2ts.sh  run.bat  run_linux.sh  run_win.bat  setup_linux.sh  setup_win.bat  src2tr.bat  src2tr.sh  src2ts.sh  tr2qm.bat  tr2qm.sh  ts2qm.sh  ui2py.bat  ui2py.sh
src/: gui_main_window.py  main.py  mp3.py  ui_main_window.py  utils.py
test/: test_mp3.py  test_utils.py
test/utils/: test_github.py  test_mp3.py  test_package.py  test_shazam.py  test_system.py  test_update.py  test_youtube.py
tests/: test_mp3.py  test_utils.py
translations/: eng-es.qm  eng-es.ts
