[tool.poetry]
name = "mp3-autotagger"
version = "v1.2.1"
description = "A simple application to tag .mp3 files automatically and more."
authors = ["Juan Rivero Sesma <jriverosesma@gmail.com>"]
readme = "README.md"
include = ["assets/*", "NOTICES", "CHANGELOG.md"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jriverosesma/mp3-autotagger"
"Issue Tracker" = "https://github.com/jriverosesma/mp3-autotagger/issues"

[tool.poetry.dependencies]
python = "^3.10"
mutagen = "^1.47.0"
pyqt5 = "^5.15.9"
requests = "^2.31.0"
shazamio = "^0.4.0.1"
yt-dlp = "^2023.7.6"

# Development
black = { version = "^23.9.1", optional = true }
bumpver = { version = "^2023.1126", optional = true }
isort = { version = "^5.12.0", optional = true }
flake8 = { version = "^6.1.0", optional = true }
pip-licenses = { version = "^4.3.2", optional = true }
pre-commit = { version = "^3.4.0", optional = true }
pyinstaller = { version = "^5.13.2", optional = true }
pyqt5-tools = { version = "^5.15.9.3.3", optional = true }

# Test
pytest = { version = "^7.4.2", optional = true }
pytest-mock = { version = "^3.11.1", optional = true }
pytest-sugar = { version = "^0.9.7", optional = true }

# Test only dependencies
pillow = { version = "^10.0.1", optional = true }

[tool.poetry.extras]
dev = ["black", "bumpver", "isort", "flake8", "pre-commit", "pyqt5-tools"]
test = ["pytest", "pytest-mock", "pytest-sugar", "pillow"]
all = ["black", "bumpver", "isort", "flake8", "pre-commit", "pyqt5-tools", "pytest", "pytest-mock", "pytest-sugar", "pillow"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mp3-autotagger = "mp3_autotagger.main:main"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.bumpver]
current_version = "v1.2.1"
version_pattern = "vMAJOR.MINOR.PATCH"
commit          = true
tag             = true
push            = true
commit_message  = "Bump version: {old_version} → {new_version}"

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    '^current_version = "{version}"$',
    '^version = "{version}"$',
]
"mp3_autotagger/__init__.py" = [
    '^__version__ = "{version}"$',
]
