[project]
name = "mp3-autotagger"
version = "v1.2.1"
description = "A simple application to tag .mp3 files automatically and more."
authors = [
  { name = "Juan Rivero Sesma", email = "jriverosesma@gmail.com" }
]
include = ["assets/*", "NOTICES.md", "CHANGELOG.md", "LICENSE"]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["dino", "chrome", "bot", "game", "automatic"]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jriverosesma/mp3-autotagger"
"Issue Tracker" = "https://github.com/jriverosesma/mp3-autotagger/issues"

[tool.poetry.dependencies]
python = "^3.10"
mutagen = "^1.47.0"
pyqt5 = "^5.15.9"
requests = "^2.32.3"
shazamio = "^0.8.0"
validators = "^0.35.0"
yt-dlp = ">=2025.5.22"

# Development
black = { version = "^25.1.0", optional = true }
bumpver = { version = "^2024.1130", optional = true }
isort = { version = "^6.0.1", optional = true }
flake8 = { version = "^7.2.0", optional = true }
pillow = { version = "^10.4.0", optional = true }
pip-licenses = { version = "^5.0.0", optional = true }
pre-commit = { version = "^4.2.0", optional = true }
pyinstaller = { version = "^6.14.0", optional = true }
pyqt5-tools = { version = "^5.15.9.3.3", optional = true }
pytest = { version = "^7.4.4", optional = true }
pytest-mock = { version = "^3.14.1", optional = true }
pytest-sugar = { version = "^0.9.7", optional = true }

[tool.poetry.extras]
dev = ["black", "bumpver", "isort", "flake8", "pre-commit", "pyqt5-tools", "pytest", "pytest-mock", "pytest-sugar", "pillow"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mp3-autotagger = "mp3_autotagger.main:main"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.bumpver]
current_version = "v1.2.1"
version_pattern = "vMAJOR.MINOR.PATCH"
commit          = true
tag             = true
push            = true
commit_message  = "Bump version: {old_version} → {new_version}"

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    '^current_version = "{version}"$',
    '^version = "{version}"$',
]
"mp3_autotagger/__init__.py" = [
    '^__version__ = "{version}"$',
]
